# mermaid-trace

./: .gitignore  CHANGELOG.md  CHANGELOG_CN.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  LICENSE  README.md  README_CN.md  SECURITY.md  SECURITY_CN.md  concurrency_test.mmd  flow.mmd  improvement_plan.md  pyproject.toml  test.db  test_concurrency.mmd  tox.ini
.github/workflows/: ci.yml  publish.yml  release.yml
.trae/documents/: Documentation & Annotation Plan.md  LogCapy Development Plan.md  LogCapy Feature Expansion_ Params, CLI, and FastAPI.md  LogCapy 命名审查与优化方案.md  Migrate Project to D__TraeProjects_mermaid-trace.md  Recreate Environment and Push Code.md  Update Copyright and Author Information Plan.md
docs/en/: API.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  USER_GUIDE.md
docs/en/code_comments/src/mermaid_trace/: __init__.md  cli.md
docs/en/code_comments/src/mermaid_trace/core/: __init__.md  config.md  context.md  decorators.md  events.md  formatter.md  utils.md
docs/en/code_comments/src/mermaid_trace/handlers/: async_handler.md  mermaid_handler.md
docs/en/code_comments/src/mermaid_trace/integrations/: __init__.md  fastapi.md
docs/source/: api.rst  conf.py  index.rst
docs/zh/: API.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  UPDATE_LOG.md  UPDATE_SUMMARY.md  USER_GUIDE.md
docs/zh/code_analysis/src/mermaid_trace/: __init__.md  cli.md
docs/zh/code_analysis/src/mermaid_trace/core/: context.md  decorators.md  events.md
docs/zh/code_analysis/src/mermaid_trace/handlers/: mermaid_handler.md
docs/zh/code_analysis/src/mermaid_trace/integrations/: fastapi.md
docs/zh/code_comments/src/mermaid_trace/: __init__.md  cli.md
docs/zh/code_comments/src/mermaid_trace/core/: __init__.md  config.md  context.md  decorators.md  events.md  formatter.md  utils.md
docs/zh/code_comments/src/mermaid_trace/handlers/: async_handler.md  mermaid_handler.md
docs/zh/code_comments/src/mermaid_trace/integrations/: __init__.md  fastapi.md
examples/: 01_basic_usage.py  02_advanced_instrumentation.py  03_async_concurrency.py  04_error_handling.py  05_intelligent_collapsing.py  06_fastapi_integration.py  07_full_stack_app.py  08-log-rotation.py  MermaidTrace_Demo.ipynb  MermaidTrace_Demo_CN.ipynb  README.md  concurrency_demo.py  demo.py  error_handling_demo.py  nested_demo.py
examples/mermaid_diagrams/: basic_demo.mmd
mermaid_diagrams/: comparison_demo.mmd
mermaid_diagrams/examples/: 08-log-rotation.mmd  08-log-rotation.mmd.3  async_flow.mmd  basic_flow.mmd  collapsed_flow.mmd  error_handling.mmd  fastapi_trace.mmd  full_stack_app.mmd  instrumentation_demo.mmd
mermaid_diagrams/tests/core/config_override/: dummy.mmd
mermaid_diagrams/tests/handlers/handlers/: append.mmd  async_flow.mmd  delay.mmd  flush_flow.mmd  test_flow.mmd
mermaid_diagrams/tests/integrations/integration_fastapi/: api_flow.mmd
mermaid_diagrams/tests/overwrite_logic/: test_overwrite_default.mmd  test_overwrite_false.mmd
mermaid_diagrams/tests/scenarios/basic_flow/: basic_flow.mmd
mermaid_diagrams/tests/scenarios/concurrency/: concurrency.mmd  trace_ids.mmd
mermaid_diagrams/tests/scenarios/edge_cases/: edge.mmd
mermaid_diagrams/tests/scenarios/performance/: bench_False.mmd  overhead.mmd
src/logcapy/: __init__.py  config.py
src/logcapy/backends/: base.py  loguru_impl.py  stdlib.py
src/logcapy/core/: context.py  decorators.py
src/logcapy/formatters/: json_fmt.py
src/logcapy/integrations/: __init__.py  django.py  fastapi.py  flask.py
src/mermaid_trace/: __init__.py  cli.py
src/mermaid_trace/core/: config.py  context.py  decorators.py  events.py  formatter.py  utils.py
src/mermaid_trace/handlers/: async_handler.py  mermaid_handler.py
src/mermaid_trace/integrations/: __init__.py  fastapi.py
tests/: conftest.py  repro_concurrency.py  test_fastapi.py  test_fastapi_integration.py  test_flow.py
tests/core/: test_cli.py  test_cli_coverage.py  test_config.py  test_config_coverage.py  test_config_override.py  test_context.py  test_context_extra.py  test_decorators.py  test_decorators_coverage.py  test_decorators_extra.py  test_events.py  test_formatter.py  test_formatter_coverage.py  test_formatter_extra.py  test_loguru.py  test_utils.py  test_utils_coverage.py
tests/handlers/: test_async_handler_coverage.py  test_handlers.py  test_mermaid_handler.py  test_mermaid_handler_coverage.py
tests/integrations/: test_decorators.py  test_django.py  test_fastapi.py  test_fastapi_coverage.py  test_fastapi_full.py  test_flask.py  test_integration_decorators.py  test_integration_fastapi.py
tests/scenarios/: test_basic_flow.py  test_concurrency.py  test_edge_cases.py  test_performance.py
