[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mermaid-trace"
version = "0.2.0"
description = "Visualize your Python code execution flow as Mermaid Sequence Diagrams."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["logging", "visualization", "mermaid", "sequence-diagram", "trace", "asyncio", "mermaid-trace"]
authors = [
  { name = "xt765", email = "xt765@foxmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Operating System :: OS Independent",
  "Topic :: System :: Logging",
  "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
# Removed legacy integrations as they are not yet re-implemented for flow viz
dev = ["pytest", "pytest-asyncio", "pytest-cov", "ruff", "mypy", "fastapi", "httpx"]

[project.urls]
Documentation = "https://github.com/xt765/mermaid-trace#readme"
Issues = "https://github.com/xt765/mermaid-trace/issues"
Source = "https://github.com/xt765/mermaid-trace"

[project.scripts]
mermaid-trace = "mermaid_trace.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mermaid_trace"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.venv",
  "/.mypy_cache",
  "/.pytest_cache",
  "/htmlcov",
  "/docs/build",
  "/.coverage",
  "/coverage.xml",
]

[tool.pytest.ini_options]
addopts = "--cov=src/mermaid_trace --cov-report=term-missing --cov-report=html --cov-report=xml"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.mypy]
strict = true
files = ["src/mermaid_trace"]
