[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mermaid-trace"
dynamic = ["version"]
description = "Visualize your Python code execution flow as Mermaid Sequence Diagrams."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["logging", "visualization", "mermaid", "sequence-diagram", "trace", "asyncio", "mermaid-trace"]
authors = [
  { name = "xt765", email = "xt765@foxmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Operating System :: OS Independent",
  "Topic :: System :: Logging",
  "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "typing-extensions>=4.0.0",
    "watchdog>=2.0.0",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.100.0",
]
all = [
    "mermaid-trace[fastapi]",
]
dev = [
    "mermaid-trace[all]",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "httpx",
]

[project.urls]
Documentation = "https://github.com/xt765/mermaid-trace#readme"
Changelog = "https://github.com/xt765/mermaid-trace/blob/main/docs/en/CHANGELOG.md"
Issues = "https://github.com/xt765/mermaid-trace/issues"
Source = "https://github.com/xt765/mermaid-trace"

[project.scripts]
mermaid-trace = "mermaid_trace.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/mermaid_trace"]
artifacts = ["*.typed", "*.mmd"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.venv",
  "/.mypy_cache",
  "/.pytest_cache",
  "/htmlcov",
  "/docs/build",
  "/.coverage",
  "/coverage.xml",
]

[tool.pytest.ini_options]
addopts = "--cov=mermaid_trace --cov-report=term-missing --cov-report=html --cov-report=xml"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
]
fail_under = 90

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
strict = true
files = ["src/mermaid_trace"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
disable_error_code = ["var-annotated", "has-type", "assignment"]
